--- a/Mods/Armor - Sarcophagus Unit/gamedata/configs/items/trade/trade_ecolog_sakharov.ltx
+++ b/Mods/Armor - Sarcophagus Unit/gamedata/configs/items/trade/trade_ecolog_sakharov.ltx
@@ -68,7 +68,6 @@ af_aam					= 2, 1
 lead_box				= 3, 1
 ecolog_guard_outfit     = 1, 1
 ecolog_outfit_orange    = 1, 1
-ecolog_exo_outfit_1     = 1, 1
 helm_respirator         = 1, 1
 helm_m40                = 1, 1
 detector_simple         = 1, 1
@@ -79,6 +78,7 @@ equ_small_pack          = 1, 1
 
 helm_protective         = 1, 1
 ecolog_outfit_green     = 1, 1
+ecolog_outfit_green_1	= 1, 1
 detector_elite          = 2, 1
 
 [supplies_3]:supplies_2
